--- a/Modul-223-Backend/src/main/resources/application.properties
+++ b/Modul-223-Backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=Modul-223-Backend
+# Server Configuration
+server.port=8080
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:wyzen_db}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${DB_USER:wyzen_user}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:your_jwt_secret}
+jwt.expiration=86400000  # Token expiration time in milliseconds (1 day)
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.wyzen=DEBUG
